appservices/domain/multiversion/delta/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: delta
    version: v1
  name: delta-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delta
      version: v1
  template:
    metadata:
      labels:
        app: delta
        version: v1
    spec:
      containers:
      - image: riveryc/app:v0.0.1
        name: delta
        ports:
        - containerPort: 8000
