appservices/domain/multiversion/delta/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: delta
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: delta
